qtwebkit (2.3.2.dfsg-4) UNRELEASED; urgency=medium

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Also disable JIT on hppa and add support for it in Platform.h trough
    hppa_support.patch (Closes: #760759).
  * Add Steven Chamberlain's nonlinux_enable_glib_support.patch to use glibc in
    kFreeBSD-* and Hurd (Closes: #760727). Thanks *a lot* to everyone involved.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 07 Sep 2014 15:22:09 -0300

qtwebkit (2.3.2.dfsg-3) unstable; urgency=medium

  * Disable JIT also in s390x.
  * Build depend upon libqt4-dev >= 4:4.8.6+git64-g5dc8b2b+dfsg-2~ so as to
    be sure to be using the version of xmlpatterns that does not consumes a
    lot of memory.
  * Ensure ppc64el is built in little endian mode with
    Colin Watson's ppc64el.patch.
  * Bound CPU usage on unknown platforms with bound_cpu_usage.patch
    (Closes: #760519). Thanks Samuel Thibault for the patch.
  * Update symbols files with buildds' logs.
  * Add x32_support.patch to support x32 (Closes: #700093).
    - Also disable JIT on x32.
  * Add arm64.patch (taken from Ubuntu's aarch64.patch) and modify it to
    properly detect arm64.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 05 Sep 2014 19:19:16 -0300

qtwebkit (2.3.2.dfsg-2) unstable; urgency=medium

  * Refresh no_gc_sections.diff.
  * Update patches from qtwebkit-opensource-src, we are having the same
    codebase here.
    - Updated no_gc_sections.diff.
    - Added fix_nonlinux_glibc_linkage.diff,
      double_conversion_correct_double_operations.patch and
      reduce_memory_usage.patch.
  * Add armel, mips and mipsel to the list of archs that should not build the
    JIT asembler.
  * Update symbols files with buildd's logs.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 03 Sep 2014 19:12:02 -0300

qtwebkit (2.3.2.dfsg-1) unstable; urgency=medium

  [ Andreas Cord-Landwehr ]