@@ -6,6 +6,9 @@ qtwebkit (2.3.2.dfsg-4) UNRELEASED; urgency=medium
   * Add Steven Chamberlain's nonlinux_enable_glib_support.patch to use glibc in
     kFreeBSD-* and Hurd (Closes: #760727). Thanks *a lot* to everyone involved.
 
+  [ Felix Geyer ]
+  * Export build flags to build-webkit.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 07 Sep 2014 15:22:09 -0300
 
 qtwebkit (2.3.2.dfsg-3) unstable; urgency=medium
